--- a/week4/css_warm_up/css/01-header.css
+++ b/week4/css_warm_up/css/01-header.css
@@ -2,17 +2,29 @@
 
 body {
   /* Write your css here... */
-
+  font-family: sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  background-color: #eee;
 }
 
 .header {
-
+  color: white;
+  background-color: #f00;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #ccc;
 }
 
 .header a {
-
+  padding: 10px 20px;
+  display: block;
 }
 
 .header-nav {
-
+  width: 900px;
+  /*background-color: green;*/
+  margin: 0 auto;
+  border-left:  1px solid #ccc;
+  border-right: 1px solid #ccc;
 }
