--- a/week4/css_warm_up/css/03-content.css
+++ b/week4/css_warm_up/css/03-content.css
@@ -1,19 +1,30 @@
 /* PHASE 3: Content */
 
 .content {
-
+  background-color: #fff;
+  width: 900px;
+  margin: 0 auto;
+  border-right: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
 }
 
 .content-sidebar {
-
+  width: 220px;
+  float: left;
+  padding: 10px;
 }
 
 .content-main {
-
+  width: 640px;
+  float: left;
+  padding: 10px;
 }
 
 .content h1 {
-
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
 .content p {
